Updated docstrings on the clustering methods

--- a/example/clustering_methods.ipynb
+++ b/example/clustering_methods.ipynb
@@ -2,25 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Clustering Methods\n",
-    "General questions: \n",
-    "- Output of all is currently tuple - should this be a matrix or dictionary? Do we want number of clusters? Number of nodes?\n",
-    "- Data structures in Python - What kind of structure is best to store these values?\n",
-    "- Speed/efficiency of code"
+    "### Methods Included: Louvain Clustering, Edge-Betweenness Clustering, and K-Clique Clustering"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -31,10 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Louvain Clustering"
    ]
@@ -43,21 +32,25 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "def louvain_clustering(nxgraph):\n",
-    "    \"\"\"\n",
-    "    Use Lovain Clustering to find communities for all nodes in forest.\n",
-    "\n",
-    "    Arguments:\n",
-    "        nxgraph (networkx.Graph): a networkx graph object\n",
+    "    \"\"\"Uses Lovain Clustering to find communities for all nodes in forest.\n",
+    "    \n",
+    "    Notes:\n",
+    "    Optimizes modularity (the measure of density of edges inside \n",
+    "    community to edges outside communities)\n",
+    "    Implemented using community.best_partition method\n",
+    "    \n",
+    "    Parameters:\n",
+    "    nxgraph (networkx.Graph): a networkx graph object\n",
     "\n",
     "    Returns:\n",
-    "        sorted list of nodes and corresponding clusters - MAKE MORE SPECIFIC\n",
+    "    Sorted list of tuples, in which for each tuple, the first number\n",
+    "    is the node number and the second is the cluster number.\n",
+    "    \n",
     "    \"\"\"\n",
     "    # Louvain clustering\n",
     "    partition = community.best_partition(nxgraph)\n",
@@ -77,10 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Edge-Betweenness Clustering"
    ]
@@ -88,18 +78,21 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def girvan_newman(G, most_valuable_edge=None):\n",
     "    \"\"\"Finds communities in a graph using the Girvan–Newman method.\n",
+    "    \n",
+    "    Notes:\n",
+    "    The Girvan–Newman algorithm detects communities by progressively\n",
+    "    removing edges from the original graph. The algorithm removes the\n",
+    "    \"most valuable\" edge, traditionally the edge with the highest\n",
+    "    betweenness centrality, at each step. As the graph breaks down into\n",
+    "    pieces, the tightly knit community structure is exposed and the\n",
+    "    result can be depicted as a dendrogram.\n",
     "\n",
-    "    Parameters\n",
-    "    ----------\n",
+    "    Parameters:\n",
     "    G : NetworkX graph\n",
     "\n",
     "    most_valuable_edge : function\n",
@@ -110,21 +103,11 @@
     "        If not specified, the edge with the highest\n",
     "        :func:`networkx.edge_betweenness_centrality` will be used.\n",
     "\n",
-    "    Returns\n",
-    "    -------\n",
+    "    Returns:\n",
     "    iterator\n",
     "        Iterator over tuples of sets of nodes in `G`. Each set of node\n",
     "        is a community, each tuple is a sequence of communities at a\n",
     "        particular level of the algorithm.\n",
-    "\n",
-    "    Notes\n",
-    "    -----\n",
-    "    The Girvan–Newman algorithm detects communities by progressively\n",
-    "    removing edges from the original graph. The algorithm removes the\n",
-    "    \"most valuable\" edge, traditionally the edge with the highest\n",
-    "    betweenness centrality, at each step. As the graph breaks down into\n",
-    "    pieces, the tightly knit community structure is exposed and the\n",
-    "    result can be depicted as a dendrogram.\n",
     "\n",
     "    \"\"\"\n",
     "    # If the graph is already empty, simply return its connected\n",
@@ -138,7 +121,6 @@
     "        def most_valuable_edge(G):\n",
     "            \"\"\"Returns the edge with the highest betweenness centrality\n",
     "            in the graph `G`.\n",
-    "\n",
     "            \"\"\"\n",
     "            # We have guaranteed that the graph is non-empty, so this\n",
     "            # dictionary will never be empty.\n",
@@ -156,13 +138,19 @@
     "    \"\"\"Returns the connected components of the graph that results from\n",
     "    repeatedly removing the most \"valuable\" edge in the graph.\n",
     "\n",
-    "    `G` must be a non-empty graph. This function modifies the graph `G`\n",
-    "    in-place; that is, it removes edges on the graph `G`.\n",
-    "\n",
+    "    Notes:\n",
     "    `most_valuable_edge` is a function that takes the graph `G` as input\n",
     "    (or a subgraph with one or more edges of `G` removed) and returns an\n",
     "    edge. That edge will be removed and this process will be repeated\n",
     "    until the number of connected components in the graph increases.\n",
+    "\n",
+    "\n",
+    "    Parameters:\n",
+    "    `G` must be a non-empty graph. This function modifies the graph `G`\n",
+    "    in-place; that is, it removes edges on the graph `G`.\n",
+    "    \n",
+    "    Returns:\n",
+    "    New_Components: Connected components of graph.\n",
     "\n",
     "    \"\"\"\n",
     "    original_num_components = nx.number_connected_components(G)\n",
@@ -174,33 +162,55 @@
     "        num_new_components = len(new_components)\n",
     "    return new_components\n",
     "\n",
-    "def most_central_edge(nxgraph): #should be moved under Graph -should all of these be moved there?\n",
+    "def most_central_edge(nxgraph):\n",
+    "    \"\"\"Uses betweenness centrality to find the most central edge.\n",
+    "   \n",
+    "    Parameters:\n",
+    "    nxgraph (networkx.Graph): a networkx graph object\n",
+    "    \n",
+    "    Returns:\n",
+    "    edge: most central edge\n",
+    "    \"\"\"\n",
+    "    \n",
     "    centrality = nx.edge_betweenness_centrality(nxgraph, weight='weight')\n",
     "    return max(centrality, key=centrality.get)\n",
     "\n",
     "def betweenness_clustering(nxgraph, clusternum):\n",
-    "    #comm_arr=[]\n",
+    "    \"\"\"Clusters based on edge-betweenness, which finds the number \n",
+    "    of shortest paths between pairs of nodes.\n",
+    "    \n",
+    "    Notes:\n",
+    "    Uses the Girvan-Newman algorith to calculate betwennness of all\n",
+    "    existing edges, remove edge with highest betweennnes, then recalculate \n",
+    "    all affected edge betwennness scores, and repeat until no more edges remain\n",
+    "\n",
+    "    Parameters: \n",
+    "    clusternum: Number of clusters\n",
+    "    nxgraph (networkx.Graph): a networkx graph object\n",
+    "    \n",
+    "    Returns:\n",
+    "    Sorted list of tuples, in which for each tuple, the first number is\n",
+    "    the node number and the second is the cluster number.\n",
+    "    \n",
+    "    \"\"\"\n",
     "    cluster_data = []\n",
     "    comp = girvan_newman(nxgraph, most_valuable_edge=most_central_edge)\n",
     "    limited = itertools.takewhile(lambda c: len(c) <= clusternum, comp)\n",
     "    for communities in limited:\n",
-    "        comm_arr = (tuple(sorted(c) for c in communities)) # doctest: +SKIP\n",
+    "        comm_arr = (tuple(sorted(c) for c in communities))\n",
     "    try:\n",
     "        for i in range(len(comm_arr)):\n",
     "            for j in range(len(comm_arr[i])):\n",
     "                curnode = (comm_arr[i])[j];\n",
     "                cluster_data.append((i,curnode))\n",
     "    except UnboundLocalError:\n",
-    "        print(\"Cluster number is too low to sufficiently use this method. Try a higher value\") #is this correct? why is this the case?\n",
+    "        print(\"Cluster number is too low to sufficiently use this method. Try a higher value\")\n",
     "    return cluster_data\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## K-Clique Clustering"
    ]
@@ -209,13 +219,28 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "def kclique_clustering(nxgraph, clusterdist):\n",
+    "    \"\"\"\n",
+    "    Notes: \n",
+    "    K-clique clustering is useful in analyzing overlapping network\n",
+    "    community structure.\n",
+    "    The function finds K-clique communities, which are the union \n",
+    "    of all cliques of size k that can \n",
+    "    be reached through adjacent (sharing k-1 nodes) k-cliques\n",
+    "\n",
+    "    Parameters: \n",
+    "    clusterdist: Size of smallest clique desired\n",
+    "    nxgraph (networkx.Graph): a networkx graph object\n",
+    "    \n",
+    "    Returns:\n",
+    "    Sorted list of tuples, in which for each tuple, the first number \n",
+    "    is the node number and the second is the cluster number.\n",
+    "    \n",
+    "    \"\"\"\n",
     "    cluster_data = []\n",
     "    comp = list(nx.k_clique_communities(nxgraph, clusterdist))\n",
     "    clusternum = len(list(comp))\n",
@@ -226,15 +251,12 @@
     "                cluster_data.append((j,curnode))\n",
     "        return cluster_data \n",
     "    else:\n",
-    "        return 0 #replace with try/catch structure?"
+    "        return 0"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Testing Clustering Methods"
    ]
@@ -242,11 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -290,11 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -314,8 +328,7 @@
     "print('edge-betweenness cluster list:{}'.format(betweenness_test))\n",
     "\n",
     "kclique_test = kclique_clustering(G, 2)\n",
-    "print('k-clique cluster list:{}'.format(kclique_test))\n",
-    "#Check: Nodes that are not included in these clustering methods (specifically, k-clique test)?"
+    "print('k-clique cluster list:{}'.format(kclique_test))"
    ]
   }
  ],
