--- a/example/Example_Usage.ipynb
+++ b/example/Example_Usage.ipynb
@@ -34,7 +34,7 @@
     "sys.path.insert(0, \"/Users/alex/Documents/OmicsIntegrator2/src\")\n",
     "from graph import *\n",
     "\n",
-    "# from OmicsIntegrator import *\n",
+    "# import OmicsIntegrator as oi\n",
     "\n",
     "interactome_file = \"/Users/alex/Documents/OmicsIntegrator2/data/iref13.cleaned.connected.tsv\"\n",
     "prize_file = \"/Users/alex/Documents/OmicsIntegrator2/data/prizes.tsv\"\n",
@@ -241,59 +241,8 @@
    },
    "outputs": [],
    "source": [
-    "# output_networkx_graph_as_interactive_html(augmented_forest, '.')"
+    "output_networkx_graph_as_interactive_html(augmented_forest, '.')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import gslr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
