changed my mind -- move it to another file

--- a/example/GSLR.ipynb
+++ b/example/GSLR.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -31,6 +33,7 @@
     "import sys\n",
     "sys.path.insert(0, \"/Users/alex/Documents/OmicsIntegrator2/src\")\n",
     "from graph import *\n",
+    "from gsslr import gsslr\n",
     "\n",
     "# import OmicsIntegrator as oi\n",
     "\n",
@@ -283,8 +286,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "04:14:19 - Graph: INFO - Duplicated edges in the interactome file (we'll keep the max cost):\n",
-      "04:14:19 - Graph: INFO - []\n"
+      "06:25:31 - Graph: INFO - Duplicated edges in the interactome file (we'll keep the max cost):\n",
+      "06:25:31 - Graph: INFO - []\n"
      ]
     }
    ],
@@ -441,7 +444,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/alex/Documents/OmicsIntegrator2/src/graph.py:799: FutureWarning: \n",
+      "/Users/alex/Documents/OmicsIntegrator2/src/graph.py:725: FutureWarning: \n",
       "Passing list-likes to .loc or [] with any missing label will raise\n",
       "KeyError in the future, you can use .reindex() as an alternative.\n",
       "\n",
@@ -452,7 +455,7 @@
     }
    ],
    "source": [
-    "class_networks, W_hat, losses = graph.gslr(dataset)"
+    "class_networks, W_hat, losses = gsslr(graph, dataset)"
    ]
   },
   {
@@ -463,7 +466,7 @@
     {
      "data": {
       "text/plain": [
-       "[<networkx.classes.graphviews.SubGraph at 0x11433b6a0>]"
+       "[<networkx.classes.graphviews.SubGraph at 0x11842b668>]"
       ]
      },
      "execution_count": 5,
@@ -1018,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -1027,7 +1030,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAZEAAAD8CAYAAAC2PJlnAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xl0VeW9//H3NzNjgAzMIczIoIABRQg4ixNYB5xax2q9\n1da297a39nd/tb0/e23tcK1KtQ5YrYoD1gHUUuvEILPKLBDClDCEEAiEOcn390cOXTEmkByS7OSc\nz2utLHP2ec4+3732kk+e59n72ebuiIiIhCMm6AJERKT5UoiIiEjYFCIiIhI2hYiIiIRNISIiImFT\niIiISNgUIiIiEjaFiIiIhE0hIiIiYYsLuoCGlpqa6pmZmUGXISLSrCxZsqTQ3dNO1C7iQyQzM5PF\nixcHXYaISLNiZptq007DWSIiEjaFiIiIhE0hIiIiYVOIiIhI2BQiIiISNoWIiIiETSEiIiJhi9gQ\nMbPLzezJ4uLisD7/0oLNvPl5fj1XJSISWSI2RNx9urvfmZycHNbn3/g8jylzN9RzVSIikSViQ+Rk\njemTxvL8YnbvPxJ0KSIiTZZCpAbZ/VJxh7nrC4MuRUSkyVKI1ODUrsm0SYpj9lqFiIhITRQiNYiL\njWF071Tm5BTi7kGXIyLSJClEjmNM31Ty9xwkt3B/0KWIiDRJCpHjGNu3Yin9Oes0pCUiUh2FyHFk\npLQko0NLZq/bGXQpIiJNkkLkBLL7pjI/t4ijZeVBlyIi0uQoRE4gu28qJYdL+WLLnqBLERFpchQi\nJzCqdyoxBrPXakhLRKQqhcgJJLeI57Tu7Zido8l1EZGqFCK1kN0nlaVb9lB84GjQpYiINCnNMkTM\nrJeZPWNm0xrj+7L7pVHuMC9XvRERkcpqFSJm1s7MppnZl2a22sxGhfNlZjbFzArMbEU17403szVm\nlmNmPz3eftw9191vD6eGcAzt3o7WiXHM0v0iIiJfEVfLdn8E/u7uV5tZAtCy8ptmlg4cdPd9lbb1\ncfecKvv5C/AY8HyVz8cCk4ELgDxgkZm9DcQCD1bZx23uXlDLuutFfGwMZ/ZK0U2HIiJVnLAnYmbJ\nwFjgGQB3P+LuVa93HQe8aWaJoc/cATxadV/uPgsoquZrRgI5oR7GEeBlYKK7L3f3y6r8NGqAHJPd\nN5XNRQfYtEtLoIiIHFOb4ayewE7gWTP73MyeNrNWlRu4+2vATOAVM7sRuA24pg51dAW2VHqdF9pW\nLTNLMbMngGFmdl8NbU7qyYZVZfdNBWC2eiMiIv9SmxCJA4YDj7v7MGA/8LU5C3d/CDgEPA5McPeS\n+iy0ynftcve73L23u1cd7jrW5qSebFhVz9RWdG3XQkugiIhUUpsQyQPy3H1B6PU0KkLlK8wsGxgM\nvAHcX8c68oHulV53C21rMsyM7L6pfLp+F6VaAkVEBKhFiLj7dmCLmfUPbToPWFW5jZkNA54EJgK3\nAilm9kAd6lgE9DWznqGJ++uAt+vw+UYxpm8q+w6Vsiy/fobIRESau9reJ/I94EUzWwYMBf6nyvst\ngUnuvt7dy4GbgE1Vd2JmU4F5QH8zyzOz2wHcvRS4h4p5ldXAq+6+MpwDakije6dihp52KCISYpH+\n1L6srCxfvHhxve1vwmNzSIyL4bW7zqq3fYqINDVmtsTds07UrlnesR6k7L6pfLZ5D/sOaQkUERGF\nSB2N6ZNGWbkzP7e6211ERKKLQqSOhvdoR4v4WF3qKyKCQqTOEuNiObNXBy2BIiKCQiQsY/qmkVu4\nn7zdB4IuRUQkUAqRMIwNLYGi3oiIRDuFSBj6pLemY9tEPe1QRKKeQiQMFUugpDE3p5Cy8si+z0ZE\n5HgUImHK7pvKngNHWblVS6CISPRSiIRpdB8tDS8iohAJU2rrRAZ2bqv7RUQkqilETkJ2v1SWbNrN\n/sOlQZciIhIIhchJyO6TxtEyZ+EGLYEiItFJIXISsjLbkxgXwywNaYlIlFKInISk+FhG9tQSKCIS\nvSI2RMzscjN7sri4YS/BHds3jXUFJWwrPtig3yMi0hRFbIi4+3R3vzM5OblBv2eMlkARkSgWsSHS\nWAZ0akNq60TmaAkUEYlCCpGTVLEESipz1hVSriVQRCTKKETqwZg+qezaf4TV2/cGXYqISKNSiNSD\n7L5aAkVEopNCpB6kt02if8c2vP3FVnIK9gVdjohIo1GI1JNbRmeydsc+zv/DLK5+/FOmLcnj4JGy\noMsSEWlQ5h7Zk8FZWVm+ePHiRvmuwpLDvL4kj1cWbSG3cD9tEuOYMLQL14/MYHDXhr3UWESkPpnZ\nEnfPOmE7hUj9c3cWbdzNy4s2886ybRwuLWdQl7ZcN6I7E4Z2JblFfKPWIyJSVwqRkCBCpLLig0d5\n+4t8pi7cwqpte0mKj+GSIZ25bkQGIzLbY2aB1SYiUhOFSEjQIVLZivxipi7czNtfbGXf4VL6prfm\n3vP7csngzsTEKExEpOlQiIQ0pRA55sCRUt5Zto2nZueydkcJg7q05T8u6s/Z/dLUMxGRJkEhEtIU\nQ+SYsnJn+tKt/OH9tWwuOsCIzPb8+KIBjOzZIejSRCTK1TZEdIlvgGJjjCuGdeWfPxrHA1cMZtOu\nA0z68zxunrKQFfkNu/qwiEh9UE+kCTl4pIzn523k8U/Ws+fAUS4d0pkfXtCPPumtgy5NRKKMhrNC\nmlOIHLP30FGenr2BZ2bncvBoGVcN78a95/elW/uWQZcmIlFCIRLSHEPkmF0lh/nTx+v56/xN4HDD\nGRn8+4X9aJOk+0xEpGFpTiQCpLRO5P9eNpCP/+Nsrjq9K8/P28jlj87RfImINBkKkWagS7sWPHjl\nqbx85ygOHS3nyj99yvPzNhLpvUgRafoUIs3IyJ4dePfebEb3SeHnb63kuy9+RvHBo0GXJSJRTCHS\nzHRolcAzN4/gZ5cM4P1VO7j0kdl8sWVP0GWJSJRSiDRDMTHGnWN78+pdo3CHqx//lKdn52p4S0Qa\nXbMMETPrZWbPmNm0oGsJ0vCM9rz7/WzOHZDOA++s5tvPLWb3/iNBlyUiUaTWIWJmsWb2uZnNCPfL\nzGyKmRWY2Ypq3htvZmvMLMfMfnq8/bh7rrvfHm4dkSS5ZTx//tbp/OLygcxeV8glj8xm8caioMsS\nkShRl57IvcDq6t4ws3Qza1NlW59qmv4FGF/N52OBycDFwEDgejMbaGZDzGxGlZ/0OtQcFcyMW0b3\n5PV/O4uEuBiufXI+kz/Kobxcw1si0rBqFSJm1g24FHi6hibjgDfNLDHU/g7g0aqN3H0WUN2fySOB\nnFAP4wjwMjDR3Ze7+2VVfgpqU3M0GtItmRnfG8PFgzvx25lruPnZhew5oOEtEWk4te2JPAz8BCiv\n7k13fw2YCbxiZjcCtwHX1KGOrsCWSq/zQtuqZWYpZvYEMMzM7quhzeVm9mRxcXTdmNcmKZ5Hrx/G\n/3xjCAtyi7jrhSUcLav2tImInLQThoiZXQYUuPuS47Vz94eAQ8DjwAR3L6mfEqv9rl3ufpe793b3\nB2toM93d70xOjr5nm5sZN5yRwW+uHsL83CL+34xVQZckIhGqNj2R0cAEM9tIxTDTuWb2QtVGZpYN\nDAbeAO6vYx35QPdKr7uFtslJ+Mawbtw5thfPz9vE1IWbgy5HRCLQCUPE3e9z927unglcB3zo7t+s\n3MbMhgFPAhOBW4EUM3ugDnUsAvqaWU8zSwh9z9t1+LzU4D/HD2BcvzR+/tYKFumqLRGpZ/V1n0hL\nYJK7r3f3cuAmYFPVRmY2FZgH9DezPDO7HcDdS4F7qJhXWQ286u4r66m2qBYbYzxy3TC6tW/Jv72w\nhPw9B4MuSUQiiJaCjxI5BSV8Y/JcMlJaMu2us2iREBt0SSLShGkpePmKPumteeT6YazatpcfT1uq\nJVJEpF4oRKLIOQPS+clFA5ixbBt/+nh90OWISARQiESZu8b1YsJpXfjdP9bwz1U7gi5HRJo5hUiU\nMTN+c9WpDOrSlh+88gU5BfuCLklEmjGFSBRqkRDLk9/KIik+lm8/t5jiA3qwlYiERyESpbq0a8ET\n3xxO/p6D3DP1M0q1NIqIhEEhEsWyMjvwwBWDmb2ukF+/92XQ5YhIMxQXdAESrGtHZLB62z6enrOB\nUzq35arTuwVdkog0I+qJCP/n0lMY1SuF+/62XEujiEidKESE+NgY/nTjcLq0S+LGpxfwxud5QZck\nIs2EQkQAaN8qgb99dzTDM9rxw1eW8j/vrqZMT0YUkRNQiMi/dGiVwF9vP4ObR/XgyVm53PLsQl3+\nKyLHpRCRr4iPjeGXEwfz4JVDmJ+7i4mT5+iGRBGpkUJEqnX9yAym3nEmJYdLuWLyp3ywWkukiMjX\nKUSkRlmZHXj7njH0TG3Ft59fzOSPcrT6r4h8hUJEjqtLuxa8dtcoJpzWhd/OXMM9Uz/nwJHSoMsS\nkSZCISInlBQfy8PXDuW+iwfw7vJtXP34PPJ2Hwi6LBFpAhQiUitmxnfG9WbKLSPYsvsAEx+by4Lc\nXUGXJSIBU4hInZzTP5037x5Ncst4bnx6Ac/O3UC57icRiVoKEamz3mmtefPu0Yzrl8Yvp6/ihqfn\ns3mXhrdEopFCRMLSNimep2/O4jdXDWFl/l4uengWz326Ub0SkSijEJGwmRnXjshg5g/HMqJnB+5/\neyXXP6VeiUg0UYjISevSrgXP3TqCh646lVVb1SsRiSbNMkTMrJeZPWNm04KuRSqYGZNGdOcfPxrL\nyFCv5Lqn5rNp1/6gSxORBnTCEDGzJDNbaGZLzWylmf0y3C8zsylmVmBmK6p5b7yZrTGzHDP76fH2\n4+657n57uHVIw+mc3IK/3DqCh64+ldVb9zL+4dm6gkskgtWmJ3IYONfdTwOGAuPN7MzKDcws3cza\nVNnWp5p9/QUYX3WjmcUCk4GLgYHA9WY20MyGmNmMKj/ptToyCYyZMSmroldyRq8O/HL6Kq57cj4b\nC9UrEYk0JwwRr1ASehkf+qn6Z+U44E0zSwQwszuAR6vZ1yygukfnjQRyQj2MI8DLwER3X+7ul1X5\nKaj10UmgOie34NlbRvDbq09l9fa9jP/jLP4yd4PW3xKJILWaEzGzWDP7AigA3nf3BZXfd/fXgJnA\nK2Z2I3AbcE0d6ugKbKn0Oi+0raZ6UszsCWCYmd1XQ5vLzezJ4uLiOpQh9c3MuCarO+//cByjeqXw\ni+mruPulzyg5rPW3RCJBrULE3cvcfSjQDRhpZoOrafMQcAh4HJhQqfdS79x9l7vf5e693f3BGtpM\nd/c7k5OTG6oMqYNOyUlMuWUE9108gL+v2M7Ex/ScEpFIUKers9x9D/AR1c9rZAODgTeA++tYRz7Q\nvdLrbqFtEkGOrb/1wrfPoPjgUSY8NpcZy7YGXZaInITaXJ2VZmbtQr+3AC4AvqzSZhjwJDARuBVI\nMbMH6lDHIqCvmfU0swTgOuDtOnxempGzeqcy43vZDOjUhnte+pz/nr6Ko2XlQZclImGoTU+kM/CR\nmS2j4h/79919RpU2LYFJ7r7e3cuBm4BNVXdkZlOBeUB/M8szs9sB3L0UuIeKeZXVwKvuvjLcg5Km\nr1NyEi/fOYpbzspkytwN3PDUfAr2Hgq6LBGpI4v0K2WysrJ88eLFQZchx/HWF/n89PXltEqMY/IN\nwzijV0rQJYlEPTNb4u5ZJ2rXLO9Yl8gycWhX3rx7NG2T4rjh6QU8NStXlwGLNBMKEWkS+ndqw1v3\njOaCUzryq3dX6zJgkWZCISJNRpukeB7/5vB/XQY84bE5rNuhy4BFmjKFiDQpxy4DfvHbZ7I3dBnw\nK4s2a3hLpIlSiEiTNKp3CjO+l83Q7u34z9eX828vfMbu/UeCLktEqlCISJPVKTmJF799BvddPIAP\nvtzB+D/OYm5OYdBliUglChFp0mJiKoa33vjuaFolxvHNZxbw4LurOVxaFnRpIoJCRJqJwV2Teed7\n2dwwMoM/z8rlyj99qrW3RJoAhYg0Gy0SYvnVN4bw1E1ZbCs+xGWPzuGF+Zs06S4SIIWINDsXDOzI\n3+/NZkRmB/7rzRXc8fxidpUcDroskaikEJFmKb1tEs/dOpKfXzaQWWsLuejh2Xy8Rs8rE2lsChFp\ntmJijNvG9OSte0bToVU8tzy7iF+8vZIdWshRpNFoAUaJCIeOlvHr977kL59uxAyyerTn0iGduXhI\nZzq2TQq6PJFmp7YLMCpEJKKs31nCO8u28e7ybXy5fZ8CRSRMCpEQhUj0yiko4d3lChSRcChEQhQi\nAscPlKtO70abpPigSxRpUhQiIQoRqapqoHRt14LfXXMao3rrYVgixyhEQhQicjyLNxbx42nL2FC4\nn9tG9+Qn4/uTFB8bdFkigdOTDUVqISuzA+98fww3jerBlLkbuPSR2SzL2xN0WSLNhkJEol7LhDj+\ne+Jg/nr7SPYfLuMbf/qU/31/LUfLyoMuTaTJU4iIhGT3TWPmD8Yy4bQu/PGDdVrkUaQWFCIilSS3\njOd/rx3K4zcOJ2/3AS55ZA5Pz86lvDyy5w5FwqUQEanGxUM6M/OHYxnbN5UH3lnNDU/PZ0vRgaDL\nEmlyFCIiNUhvk8RTN2Xx0FWnsiJ/Lxf/cTavLtqipedFKlGIiByHmTFpRHfeuzebQV3a8pPXl3HL\ns4vYvEu9EhFQiIjUSvcOLZl6x5n8/LKBLN5YxAX/+wmTP8rhSKmu4JLophARqaVjS8//89/HcU7/\ndH47cw2XPjKbhRuKgi5NJDAKEZE66pzcgie+dTrP3JzFgSNlTPrzPH782lKK9h8JujSRRqcQEQnT\nead05P0fjeWucb154/N8zvv9x7y6WBPvEl0UIiInoWVCHD+9eAAzvj+G3mmt+cm0ZVz75HzW7dBN\nihIdFCIi9WBAp7a8+p1R/OaqIazdsY9LHpnNb2d+ycEjZUGXJtKgFCIi9SQmxrh2RAYf/GgcE07r\nyuSP1nPhw5/wweodGuKSiKUQEalnKa0T+f2k05h6x5kkxMZw+3OLuf6p+XyxRasDS+RRiIg0kFG9\nU3jv3rH898RBrNtRwhWT53L3i5+xoXB/0KWJ1Bs9lEqkEZQcLuWpWbk8NTuXI6XlXD8yg++f15e0\nNolBlyZSLT3ZMEQhIk1Jwb5DPPLBOqYu3EJiXAx3ZPfijrG9aJ0YF3RpIl+hEAlRiEhTlLuzhN/9\nYw3vLt9OausE7j2vL9eNzCA+ViPM0jTo8bgiTVivtNb86cbTeeO7Z9E7rTX/962VXPCHT3hn2TZd\nySXNSrMMETPrZWbPmNm0oGsRORnDMtrz8p1nMuWWLBLjYrn7pc+YOHku76/SZcHSPJwwRMysu5l9\nZGarzGylmd0b7peZ2RQzKzCzFdW8N97M1phZjpn99Hj7cfdcd7893DpEmhIz49wBHXn33mx+e/Wp\n7D5whDueX8zFf5zNjGVbKdNTFaUJO+GciJl1Bjq7+2dm1gZYAlzh7qsqtUkHDrr7vkrb+rh7TpV9\njQVKgOfdfXCl7bHAWuACIA9YBFwPxAIPVinpNncvCH1umrtffbz6NScizU1pWTlvL93KYx/lkLtz\nP73SWnH32X2YOLQLcZozkUZSb3Mi7r7N3T8L/b4PWA10rdJsHPCmmSWGvvwO4NFq9jULqG7d7JFA\nTqiHcQR4GZjo7svd/bIqPwUnqlmkOYuLjeHK4d14/4fjmHzDcBJiY/j315Zyzu8/5qUFmzlcqqVU\npOmo0581ZpYJDAMWVN7u7q8BM4FXzOxG4DbgmjrsuiuwpdLrPL4eVJXrSDGzJ4BhZnZfDW0uN7Mn\ni4uL61CGSNMRG2Ncempn3rs3m6dvyqJDywR+9sZyxj30Mc/O3aB1uaRJqHWImFlr4HXgB+6+t+r7\n7v4QcAh4HJjg7iX1VuXXv2uXu9/l7r3dvepw17E20939zuTk5IYqQ6RRmBnnD+zIm3eP5q+3jyQj\npSW/nL6K7Ic+5IlP1lNyuDToEiWK1SpEzCyeigB50d3/VkObbGAw8AZwfx3ryAe6V3rdLbRNRELM\njOy+abz6nVG8cueZnNK5Lb9+70tG//pDfvP3L9lWfDDoEiUK1WZi3YDngCJ3/0ENbYYBLwGXARuA\nF4H17v5f1bTNBGZUmViPo2Ji/TwqwmMRcIO7r6z7IX2VJtYlkn2xZQ9PfLyef6zaTowZlwzpzG1j\nejK0e7ugS5Nmrt7uWDezMcBsYDlQHtr8M3d/t1Kb0cBed18eeh0P3OLuT1XZ11TgbCAV2AHc7+7P\nhN67BHiYiiuyprj7r2pxnCekEJFosKXoAM99upFXFm1h3+FSTu/RnttG9+SiQR11RZeERcuehChE\nJJrsO3SUaUvyeHbuRjYXHaBruxbcfFYPrh2RQXKL+KDLk2ZEIRKiEJFoVFbufLB6B8/M2cCCDUW0\nTIhlUlZ3bjkrk8zUVkGXJ82AQiREISLRbkV+MVPmbmD60q2UljvnDUjnW6Myye6TSkyMBV2eNFEK\nkRCFiEiFgn2HeGHeJl5csJld+4/QvUMLrhuRwTVZ3UhvkxR0edLEKERCFCIiX3W4tIyZK3fw0oJN\nzM8tIi7GuHBQR24Y2YOzeqeodyKAQuRfFCIiNVu/s4SpCzYz7bM89hw4So+Ullw/MoOrT+9Gams9\ndTGaKURCFCIiJ3boaBl/X7GdlxZsZuHGIuJjjYsGdeKGMzIY1SuFitvFJJooREIUIiJ1s27HPl5a\nuJnXl+Sx91ApvVJbceuYnkzK6kZiXGzQ5UkjUYiEKEREwnPoaBnvLNvG8/M3sXTLHjq1TeI743px\n/cgMkuIVJpFOIRKiEBE5Oe7O3JxdPPLhOhZuKCK1dSLfGduLG8/MoGVCXNDlSQNRiIQoRETqz/zc\nXTz64Trm5uyiQ6sEvp3dk5tGZdI6UWESaRQiIQoRkfq3ZFMRj3yQwydrd9KuZTy3je7JzWdlammV\nCKIQCVGIiDScpVv28OiH6/jn6gLaJMVx61mZ3DamJ+1aJgRdmpwkhUiIQkSk4a3cWsxjH+bw3ort\ntEqI5cYze3DTqB50a98y6NIkTAqREIWISONZs30fkz/K4Z3l23B3xg/uxK2je5LVo73uNWlmFCIh\nChGRxrd1z0Gen7eJqQs3U3zwKIO7tuW20T259NTOutekmVCIhChERIJz4Egpb3yez7NzN5JTUEJq\n60S+dWYPbjwzQ8uqNHEKkRCFiEjw3J3Z6wqZMncDH6/ZSUJsDBOGduHW0ZkM6pIcdHlSjdqGiC7u\nFpEGZ2aM7ZfG2H5prN9Zwl/mbmTakjymLcljZM8O3HpWJucP7Ei8HuXb7KgnIiKBKD5wlFcWb+a5\nTzeRv+cgaW0SmZTVjetGZNC9g67qCpqGs0IUIiJNW2lZOR+v2clLCzfz8ZoCHBjbN40bzsjgvAHp\nxKl3EgiFSIhCRKT5yN9zkFcWbeGVRZvZsfcwHdsmcm1WdyaN6K57ThqZQiREISLS/JSWlfPhlwVM\nXbiZj9fuBODsfmnccEYPzumfpt5JI1CIhChERJq3vN0HQr2TLRTsO0yntklMGtGdq4Z3pUdKq6DL\ni1gKkRCFiEhkOBrqnby0YDOz1u3EHUZktufK4d24ZEhnLf5YzxQiIQoRkcizrfggb3yez+tL8li/\ncz8JcTFcOLAjVw3vRnbfVA131QOFSIhCRCRyuTvL84t5fUkeby/dyu4DR0ltncgVQ7tw5fBuDOzS\nNugSmy2FSIhCRCQ6HCkt5+M1Bbz+WR4fflnA0TJnQKc2XDW8GxOHdSG9TVLQJTYrCpEQhYhI9Nm9\n/wgzlm1l2mf5LN2yhxiDUb1TuOzULowf1In2rfS8kxNRiIQoRESiW05BCW99kc+MZdvYULifuBhj\nTN9ULju1CxcO6kjbJE3IV0chEqIQERGomD9ZuXUv05dtZcbSbeTvOUhCbAxj+6Vx+WmdOf+UjrTS\ns+L/RSESohARkarcnS+27GH60m28u3wb2/ceIjEuhvNOSeeyU7twTv90WiRE93NPFCIhChEROZ7y\ncmfxpt3MWLaVd5dvo7DkCC0TYjmnfzoXDurIOQPSo3LISyESohARkdoqK3cW5O5i+rJtvL9qB4Ul\nh4mPNc7qncpFgzpxwcCOpLWJjodpKURCFCIiEo6ycufzzbuZuXI7M1fuYHPRAcxgeEZ7LhrUkYsG\ndYroZVcUIiEKERE5We7Omh37mLliBzNXbmfVtr0ADOjUhgsHdeKiQR0Z2LktZhZwpfVHIRKiEBGR\n+ral6AAzV27nHyt3sGhTEe7QtV0Lzh2QzrmnpDOqVwpJ8c17Yl4hEqIQEZGGVFhymA9W7+CD1QXM\nXlfIwaNlJMXHMKZPKucO6Mi5A9LplNz87pZXiIQoRESksRw6WsaCDUV8uHoHH3xZQN7ugwAM6tK2\nopcyIJ3TurUjJqbpD3spREIUIiISBHdnXUEJH35ZwIerC1i8qYhyh9TWCZzdP51z+qczpk8qyS2b\n5uXDCpEQhYiINAV7Dhzhk7U7+WB1AZ+s3UnxwaPEGAzt3o5x/dIZ2y+VU7u1I7aJ9FIUIiEKERFp\nakrLylmat4dP1uzkk3WFLMvbgzu0axnPmD6pjOuXxth+aXRsG9xcikIkRCEiIk1d0f4jzMkpZNba\nnXyydic79x0GKi4hHtcvjXH90jg9sz2JcY13xZdCJEQhIiLNibvz5fZ9fLJ2J7PW7mTRxiKOljkt\n4mMZ0bMDY/qkMLpPKqd0atugE/QKkRCFiIg0Z/sPlzJv/S7m5BQyN6eQdQUlAHRolcCo3imM6ZPK\n6N6pZKS0rNfvrW2IaN1jEZEmrFViHOcP7Mj5AzsCsGPvIebmFDI3Zxdzcwp5Z9k2ALp3aMHo3qmM\n7pPKWb1TSGndOGt8qSciItJMuTvrd+7n0/WFzFlXyLzcXew7VArAKZ3b8tytI0gPc3JePRERkQhn\nZvRJb02f9NbcNCqT0rJyVmzdy9ycQj7fvIfURuiNKERERCJEXGwMQ7u3Y2j3do32nTGN9k0iIhJx\nFCIiIhI2hYiIiIRNISIiImFTiIiISNgUIiIiEjaFiIiIhE0hIiIiYYv4ZU/MbCewKcyPpwKF9VhO\nc6Bjjg6Z0/YuAAADC0lEQVTRdszRdrxw8sfcw93TTtQo4kPkZJjZ4tqsHRNJdMzRIdqOOdqOFxrv\nmDWcJSIiYVOIiIhI2BQix/dk0AUEQMccHaLtmKPteKGRjllzIiIiEjb1REREJGwKkWqY2XgzW2Nm\nOWb206DraQxmttHMlpvZF2YWsY+CNLMpZlZgZisqbetgZu+b2brQf9sHWWN9quF4f2Fm+aFz/YWZ\nXRJkjfXNzLqb2UdmtsrMVprZvaHtkXyeazrmBj/XGs6qwsxigbXABUAesAi43t1XBVpYAzOzjUCW\nu0f0tfRmNhYoAZ5398GhbQ8BRe7+69AfDe3d/T+DrLO+1HC8vwBK3P13QdbWUMysM9DZ3T8zszbA\nEuAK4BYi9zzXdMyTaOBzrZ7I140Ectw9192PAC8DEwOuSeqJu88Ciqpsngg8F/r9OSr+54sINRxv\nRHP3be7+Wej3fcBqoCuRfZ5rOuYGpxD5uq7Alkqv82ikkxEwB/5hZkvM7M6gi2lkHd19W+j37UDH\nIItpJPeY2bLQcFfEDOtUZWaZwDBgAVFynqscMzTwuVaIyDFj3H04cDFwd2gYJOp4xfhupI/xPg70\nBoYC24DfB1tOwzCz1sDrwA/cfW/l9yL1PFdzzA1+rhUiX5cPdK/0ultoW0Rz9/zQfwuAN6gY1osW\nO0JjysfGlgsCrqdBufsOdy9z93LgKSLwXJtZPBX/mL7o7n8LbY7o81zdMTfGuVaIfN0ioK+Z9TSz\nBOA64O2Aa2pQZtYqNBmHmbUCLgRWHP9TEeVt4ObQ7zcDbwVYS4M79g9pyDeIsHNtZgY8A6x29z9U\neitiz3NNx9wY51pXZ1UjdBncw0AsMMXdfxVwSQ3KzHpR0fsAiANeitRjNrOpwNlUrHC6A7gfeBN4\nFcigYsXnSe4eEZPRNRzv2VQMbziwEfhOpbmCZs/MxgCzgeVAeWjzz6iYI4jU81zTMV9PA59rhYiI\niIRNw1kiIhI2hYiIiIRNISIiImFTiIiISNgUIiIiEjaFiIiIhE0hIiIiYVOIiIhI2P4/Mai5KDpL\nW3YAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1140ce518>"
+       "<matplotlib.figure.Figure at 0x1173c1588>"
       ]
      },
      "metadata": {},
@@ -1038,6 +1041,13 @@
     "plt.plot(losses)\n",
     "plt.yscale('log')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
