--- a/example/Example_Usage.ipynb
+++ b/example/Example_Usage.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "interactome_file = \"/Users/alex/Documents/OmicsIntegrator2/data/iref13.cleaned.connected.tsv\"\n",
     "prize_file = \"/Users/alex/Documents/OmicsIntegrator2/data/prizes.tsv\"\n",
-    "graph = Graph(interactome_file, {'a':100000000}, skip_checks=True)\n",
+    "graph = Graph(interactome_file, {'a':100000000})\n",
     "\n",
     "graph.prepare_prizes(prize_file)\n"
    ]
@@ -239,7 +239,18 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/alex/Documents/OmicsIntegrator2/example/graph.html'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "output_networkx_graph_as_interactive_html(augmented_forest, '.')"
    ]
@@ -261,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
