--- a/subcellular/subcellular_location.ipynb
+++ b/subcellular/subcellular_location.ipynb
@@ -1463,7 +1463,7 @@
     }
    ],
    "source": [
-    "locations.sample(20)"
+    "locations.sample(20) #to confirm these hits are reason"
    ]
   },
   {
@@ -1523,51 +1523,8 @@
     }
    ],
    "source": [
-    "locations[locations.index == \"HLA-DPB1\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 370,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "rec.array([('Vesicle', 1), ('Organelle', 1),\n",
-       "           ('membrane-bounded organelle', 1), ('Extracellular region', 4),\n",
-       "           ('Nucleus', 5), ('Cytoplasm', 4), ('Cytoplasm', 5),\n",
-       "           ('Mitochondrion', 5), ('Lipid particle', 5),\n",
-       "           ('Endomembrane system', 4), ('Membrane', 5),\n",
-       "           ('Secretory granule', 4), ('Midbody', 5),\n",
-       "           ('Platelet alpha granule', 4),\n",
-       "           ('Platelet alpha granule lumen', 4),\n",
-       "           ('Cytoplasmic vesicle', 4), ('membrane-enclosed lumen', 4),\n",
-       "           ('Vesicle', 4), ('Vesicle lumen', 4),\n",
-       "           ('Secretory granule lumen', 4), ('Organelle', 4),\n",
-       "           ('Organelle', 5), ('membrane-bounded organelle', 4),\n",
-       "           ('membrane-bounded organelle', 5),\n",
-       "           ('non-membrane-bounded organelle', 5),\n",
-       "           ('Intracellular organelle', 4), ('Intracellular organelle', 5),\n",
-       "           ('Intracellular membrane-bounded organelle', 5),\n",
-       "           ('Intracellular non-membrane-bounded organelle', 5),\n",
-       "           ('Organelle lumen', 4), ('Organelle part', 4),\n",
-       "           ('Intracellular part', 4), ('Intracellular part', 5),\n",
-       "           ('Cytoplasmic vesicle part', 4), ('Cytoplasmic part', 4),\n",
-       "           ('Cytoplasmic part', 5), ('Intracellular organelle part', 4),\n",
-       "           ('Cytoplasmic vesicle lumen', 4),\n",
-       "           ('Intracellular organelle lumen', 4),\n",
-       "           ('Intracellular vesicle', 4), ('Secretory vesicle', 4)],\n",
-       "          dtype=[('location', 'O'), ('confidence', '<i8')])"
-      ]
-     },
-     "execution_count": 370,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "locations2[\"SCCPDH\"]"
+    "#locations[locations.index == \"HLA-DPB1\"]\n",
+    "#locations2[\"SCCPDH\"]"
    ]
   },
   {
