--- a/example/Example_Usage.ipynb
+++ b/example/Example_Usage.ipynb
@@ -56,10 +56,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "09:13:05 - Graph: INFO - Duplicated gene symbols in the prize file (we'll keep the max prize):\n",
-      "09:13:05 - Graph: INFO - []\n",
-      "09:13:05 - Graph: INFO - Members of the prize file not present in the interactome:\n",
-      "09:13:05 - Graph: INFO - ['ATP6V0E1', 'CXorf36', 'GLT25D1', 'NORAD']\n"
+      "10:20:18 - Graph: INFO - Duplicated gene symbols in the prize file (we'll keep the max prize):\n",
+      "10:20:18 - Graph: INFO - []\n",
+      "10:20:18 - Graph: INFO - Members of the prize file not present in the interactome:\n",
+      "10:20:18 - Graph: INFO - ['ATP6V0E1', 'CXorf36', 'GLT25D1', 'NORAD']\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "array([], dtype=int64)"
       ]
      },
      "execution_count": 5,
@@ -93,10 +93,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([], dtype=int64),)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(graph.node_attributes[\"terminal\"] == True)"
+   ]
   },
   {
    "cell_type": "code",
