change soon-to-be-deprecated .locs to .reindexes

--- a/example/Example_Usage.ipynb
+++ b/example/Example_Usage.ipynb
@@ -69,10 +69,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "11:26:03 - Graph: INFO - Duplicated gene symbols in the prize file (we'll keep the max prize):\n",
-      "11:26:03 - Graph: INFO - []\n",
-      "11:26:03 - Graph: INFO - Members of the prize file not present in the interactome:\n",
-      "11:26:03 - Graph: INFO - ['ATP6V0E1', 'CXorf36', 'GLT25D1', 'NORAD']\n"
+      "09:41:39 - Graph: INFO - Duplicated gene symbols in the prize file (we'll keep the max prize):\n",
+      "09:41:39 - Graph: INFO - []\n",
+      "09:41:39 - Graph: INFO - Members of the prize file not present in the interactome:\n",
+      "09:41:39 - Graph: INFO - ['ATP6V0E1', 'CXorf36', 'GLT25D1', 'NORAD']\n"
      ]
     }
    ],
@@ -97,22 +97,9 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/alex/Documents/OmicsIntegrator2/src/graph.py:721: FutureWarning: \n",
-      "Passing list-likes to .loc or [] with any missing label will raise\n",
-      "KeyError in the future, you can use .reindex() as an alternative.\n",
-      "\n",
-      "See the documentation here:\n",
-      "http://pandas.pydata.org/pandas-docs/stable/indexing.html#deprecate-loc-reindex-listlike\n",
-      "  nx.set_node_attributes(nxgraph, subcellular.loc[list(nxgraph.nodes())].dropna(how='all').to_dict(orient='index'))\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<networkx.classes.graph.Graph at 0x112437358>"
+       "<networkx.classes.graph.Graph at 0x10c5919b0>"
       ]
      },
      "execution_count": 7,
