remove penalize_nodes and kockout functions, refactor randomizations

--- a/interactomes/PreProcess_IRefIndex_For_OmicsIntegrator.ipynb
+++ b/interactomes/PreProcess_IRefIndex_For_OmicsIntegrator.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -59,76 +59,76 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0610009B22Rik</td>\n",
-       "      <td>REPS2</td>\n",
-       "      <td>two hybrid</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>14.0</td>\n",
+       "      <td>APOA1</td>\n",
+       "      <td>APOA1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>141818.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0610009B22Rik</td>\n",
-       "      <td>TRAPPC3</td>\n",
-       "      <td>two hybrid</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>14.0</td>\n",
+       "      <td>RMND5B</td>\n",
+       "      <td>SHBG</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>123.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0610009B22Rik</td>\n",
-       "      <td>LAP3</td>\n",
-       "      <td>two hybrid</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>14.0</td>\n",
+       "      <td>NFAT5</td>\n",
+       "      <td>NFAT5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0610009B22Rik</td>\n",
-       "      <td>POSTN</td>\n",
-       "      <td>two hybrid</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>14.0</td>\n",
+       "      <td>NFAT5</td>\n",
+       "      <td>NFAT5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0610009B22Rik</td>\n",
-       "      <td>SPATA22</td>\n",
-       "      <td>two hybrid</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>RMND5B</td>\n",
+       "      <td>SMAD4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>47464.0</td>\n",
+       "      <td>2642.0</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        protein1 protein2 Interaction detection methods  \\\n",
-       "0  0610009B22Rik    REPS2                    two hybrid   \n",
-       "1  0610009B22Rik  TRAPPC3                    two hybrid   \n",
-       "2  0610009B22Rik     LAP3                    two hybrid   \n",
-       "3  0610009B22Rik    POSTN                    two hybrid   \n",
-       "4  0610009B22Rik  SPATA22                    two hybrid   \n",
+       "  protein1 protein2 Interaction detection methods  Confidence score: hpr  \\\n",
+       "0    APOA1    APOA1                           NaN               141818.0   \n",
+       "1   RMND5B     SHBG                           NaN                  123.0   \n",
+       "2    NFAT5    NFAT5                           NaN                    2.0   \n",
+       "3    NFAT5    NFAT5                           NaN                    2.0   \n",
+       "4   RMND5B    SMAD4                           NaN                47464.0   \n",
        "\n",
-       "   Confidence score: hpr  Confidence score: lpr  Confidence score: np  \n",
-       "0                   14.0                   14.0                   1.0  \n",
-       "1                   14.0                   14.0                   1.0  \n",
-       "2                   14.0                   14.0                   1.0  \n",
-       "3                   14.0                   14.0                   1.0  \n",
-       "4                   14.0                   14.0                   1.0  "
+       "   Confidence score: lpr  Confidence score: np  \n",
+       "0                    1.0                   8.0  \n",
+       "1                  123.0                   1.0  \n",
+       "2                    2.0                   1.0  \n",
+       "3                    2.0                   1.0  \n",
+       "4                 2642.0                   2.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "irefindex = pd.read_pickle(\"../../interactomes/IRefIndex/iref15.1.22.2018.cleaned.namespace-mapped.full.pickle\")\n",
+    "irefindex = pd.read_pickle(\"../../interactomes/IRefIndex/\")\n",
     "irefindex.head()"
    ]
   },
