just a few renames

--- a/annotation/final_annotation.ipynb
+++ b/annotation/final_annotation.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "process     = pd.read_pickle('./biological_processes_gene_annotation.pickle')\n",
     "function    = pd.read_pickle('./molecular_function_gene_annotation.pickle')\n",
-    "subcellular = pd.read_pickle('./subcellular.pickle')"
+    "subcellular = pd.read_pickle('./subcellular_location.pickle')"
    ]
   },
   {
